2009-07-24  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCIONS/cellfun.cc (Fcellfun): Avoid double error messages.

2009-07-24  Jaroslav Hajek  <highegg@gmail.com>

	* load-path.cc (load_path::do_any_class_method): New method.
	* load-path.h (load_path::do_any_class_method): New method decl.
	(load_path::any_class_method): New method.
	* ov-fcn-handle.cc (octave_fcn_handle::do_multi_index_op): Support
	calls without non-overloaded base function.
	(make_fcn_handle): Support creation without non-overloaded base
	function.

2009-07-23  Shai Ayal  <shaiay@users.sourceforge.net>

	* DLD-FUNCTIONS/fltk_backend.cc (plot_window::pixel2axes_or_ca):
	Replace plot_window::pixel2axes and use algorithm from octavede.
	(plot_window::handle): Zooming now works on the axes below the
	mouse pointer instead of the current axes. Combine old and new
	zooming methods.
	(help_text): Update to reflect new mouse/key bindings.

2009-07-23  Soren Hauberg  <hauberg@gmail.com>

	* graphics.cc (axes::properties::zoom_about_point,
	axes::properties::translate_view): New functions.
	(axes::properties::zoom): make zoom_stack usage optional.
	* DLD-FUNCTIONS/fltk_backend.cc (plot_window::handle): Use new
	zoom API.

2009-07-23  John W. Eaton  <jwe@octave.org>

	* variables.cc (safe_symbol_lookup): New function.
	(symbol_exist): Use it.

2009-07-23  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/chol.cc (Fcholupdate,
	Fcholinsert, Fcholdelete, Fcholshift): Replace is_matrix_type ->
	is_numeric_type.

2009-07-23  John W. Eaton  <jwe@octave.org>

	* toplev.cc (IGNORE_EXCEPTION, SAFE_CALL): New macros.
	(clean_up_and_exit, do_octave_atexit): Use SAFE_CALL to handle
	exceptions while preparing to exit.

2009-07-23  Jaroslav Hajek  <highegg@gmail.com>

	* symtab.cc (get_dispatch_type): Omit first-arg dispatch, export.
	* symtab.h (get_dispatch_type): Provide decl.
	* ov-fcn-handle.h (octave_fcn_handle::warn_reload): Delete.
	(octave_fcn_handle::disp): New field.