@@ -1,3 +1,8 @@
+2009-07-24  John W. Eaton  <jwe@octave.org>
+
+	* pt-mat.cc (DO_SINGLE_TYPE_CONCAT_NO_MUTATE): New macro.
+	(tree_matrix::rvalue1): Use it to avoid complex -> real conversion.
+
 2009-07-24  Jaroslav Hajek  <highegg@gmail.com>
 
 	* DLD-FUNCIONS/cellfun.cc (Fcellfun): Avoid double error messages.
